--- a/trunk/WordArena/work/TODO.txt
+++ b/trunk/WordArena/work/TODO.txt
@@ -1,5 +1,5 @@
 - Gestion de la carte
-	- Le héros trouve un chemin grâce au Pathfinder
+	- Le héros trouve un chemin grâce au Pathfinder et le suit
 	- Ajouter un UIOverlay avec un bouton pour spawner une unité
 	- Choisir de quel côté sort cette unité et la faire partir vers le château adverse
 	- Ajouter un second château adverse et un avant-poste. Permettre la sélection du château à attaquer.
@@ -8,3 +8,6 @@
 	- Mettre en place une IA qui spwan des ennemis (pour simplifier au début, spwan d'une unité à un interval aléatoire)
 	- Ajouter des animations pour le déplacement et l'action d'une unité
 	- Engager le combat entre unités ennemies
+- Monde
+	- Evoluer sur une carte du monde
+	- Ouvrir le champ de bataille sur une touche
