--- a/trunk/WordArena/work/TODO.txt
+++ b/trunk/WordArena/work/TODO.txt
@@ -1,13 +1,13 @@
 - Gestion de la carte
-	- Le héros trouve un chemin grâce au Pathfinder et le suit
-	- Ajouter un UIOverlay avec un bouton pour spawner une unité
-	- Choisir de quel côté sort cette unité et la faire partir vers le château adverse
-	- Ajouter un second château adverse et un avant-poste. Permettre la sélection du château à attaquer.
-	- Générer une carte aléatoire à partir de paramètres (nombre d'ennemis, nombre de sorties du château, nombre d'avant-postes...)
+	- Le hÃ©ros trouve un chemin grÃ¢ce au Pathfinder et le suit
+	- Ajouter un UIOverlay avec un bouton pour spawner une unitÃ©
+	- Choisir de quel cÃ´tÃ© sort cette unitÃ© et la faire partir vers le chÃ¢teau adverse
+	- Ajouter un second chÃ¢teau adverse et un avant-poste. Permettre la sÃ©lection du chÃ¢teau Ã  attaquer.
+	- GÃ©nÃ©rer une carte alÃ©atoire Ã  partir de paramÃ¨tres (nombre d'ennemis, nombre de sorties du chÃ¢teau, nombre d'avant-postes...)
 - Combat
-	- Mettre en place une IA qui spwan des ennemis (pour simplifier au début, spwan d'une unité à un interval aléatoire)
-	- Ajouter des animations pour le déplacement et l'action d'une unité
-	- Engager le combat entre unités ennemies
+	- Mettre en place une IA qui spwan des ennemis (pour simplifier au dÃ©but, spwan d'une unitÃ© Ã  un interval alÃ©atoire)
+	- Ajouter des animations pour le dÃ©placement et l'action d'une unitÃ©
+	- Engager le combat entre unitÃ©s ennemies
 - Monde
 	- Evoluer sur une carte du monde
 	- Ouvrir le champ de bataille sur une touche
