--- a/WordArena/work/TODO.txt
+++ b/WordArena/work/TODO.txt
@@ -5,7 +5,7 @@
 	- Ajouter un second château adverse et un avant-poste. Permettre la sélection du château à attaquer.
 	- Générer une carte aléatoire à partir de paramètres (nombre d'ennemis, nombre de sorties du château, nombre d'avant-postes...)
 - Combat
-	- Mettre en place une IA qui spwan des ennemis (pour simplifier au début, spwan d'une unité à un interval aléatoire)
+	x Mettre en place une IA qui spwan des ennemis (pour simplifier au début, spwan d'une unité à un interval aléatoire)
 	- Ajouter des animations pour le déplacement et l'action d'une unité
 	- Engager le combat entre unités ennemies
 - Monde
