--- a/WordArena/work/TODO.txt
+++ b/WordArena/work/TODO.txt
@@ -4,14 +4,12 @@ Refactoring :
 	-> Faire un SlamWorldLayer contenant une tiledmap et en faisant le rendu
 	-> Ou avoir une simple image de fond ??? Gérer alors des chemins réels que pourront suivre
 	les unités
-		-> Créer une classe Polyline extends Path qui gère un chemin en ligne droite entre plusieurs waypoints
 Ainsi, on n'a qu'une seule caméra, qu'un seul viewport, qu'un seul système d'unités. 
 
 Champ de bataille
 ¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯
 [ ] Faire des chemins de type : 1 départ, 1 destination. Donc pas d'embranchement ni de carrefours.
-	[ ] Supprimer la zone de sélection
-	[ ] Choix du chemin : faire simplement le choix en fonction du chemin qui contient le tile touché 
+[ ] Gestion simplifié de la carte du champ de bataille : 1 fond de carte avec des chemins (invisibles) que suivent les unités
 [ ] Borner le déplacement de la carte pour qu'elle soit toujours visible   
 [ ] Générer une carte aléatoire à partir de paramètres (nombre d'ennemis, nombre de sorties du château, nombre d'avant-postes...)
 
