MOD : TransformComponent a désormais une position relative et une position absolue ADD : ParticleRendererComponent

--- a/WordArena/work/TODO.txt
+++ b/WordArena/work/TODO.txt
@@ -1,3 +1,14 @@
+GameParts
+¯¯¯¯¯¯¯¯¯
+[ ] Ajouter les composants :
+	[X] Particules
+	[ ] UI
+	[ ] LayeredSpriteRenderer
+	[ ] Colliders
+	[ ] Tween
+	[ ] Body et autres Box2d (https://github.com/libgdx/libgdx/wiki/box2d)
+	[ ] Lumière
+
 Champ de bataille
 ¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯
 [ ] Gérer la fin de partie (affichage popup, retour à la carte du monde)
