MOD : AnimationControllerComponent : ajout d'un état AnyState plutôt que des transitions globales MOD : AnimationCreator refactoré en gameparts.creators.AnimationFactory MOD : Renommage de TestScene en GamePartsTestScreen ADD : DirectionUpdaterScript ADD : FollowScript

--- a/WordArena/work/TODO.txt
+++ b/WordArena/work/TODO.txt
@@ -3,7 +3,7 @@ GameParts
 [ ] Ajouter les composants :
 	[X] Particules
 	[ ] UI
-	[ ] LayeredSpriteRenderer
+	[/] LayeredSpriteRenderer : inutile, il suffit de faire un enfant à un GameObject
 	[ ] Colliders
 	[ ] Tween
 	[ ] Body et autres Box2d (https://github.com/libgdx/libgdx/wiki/box2d)
