--- a/trunk/WordArena/work/TODO.txt
+++ b/trunk/WordArena/work/TODO.txt
@@ -1,6 +1,7 @@
 WordArena
 ¯¯¯¯¯¯¯¯¯
-[ ] Déplacer la caméra si drag à 2 doigts ou bouton du milieu
+[ ] Sélection de lettres sur touch, déplacement caméra sur drag
+[ ] Dessin des zones de l'arène
 
 Ashley
 ¯¯¯¯¯¯
