--- a/WordArena/work/TODO.txt
+++ b/WordArena/work/TODO.txt
@@ -1,16 +1,12 @@
 WordArena
 ¯¯¯¯¯¯¯¯¯
-[ ] Renommer cell weight en cell power
-[ ] Création de l'arène à partir d'un fichier. Format :
-	- Partie donnant des indications sur le type de l'arène (donc l'objectif)
-	- Partie décrivant l'arène et les cellules : indique où il y a des cellules et de quel type elles sont (vide, occupées par un joueur...)
-	- Partie décrivant les zones
+[ ] Possibilité de désélectionner une partie du mot en touchant sur une cellule sélectionnée
+[ ] Avoir un visuel différent par types de cellule
 [ ] Gérer la vie d'une partie :
 	- 1 grille de lettres par round
 	- 2 rounds gagnants. Le premier joueur a jouer change à chaque round
 	- 1 round = 5 coups par joueur
 	- Détection de la fin de partie (si un joueur n'a plus de zone, il perd)
-[X] Interdire de commencer un mot hors d'une zone contrôlée
 
 Ashley
 ¯¯¯¯¯¯
