--- a/WordArena/work/TODO.txt
+++ b/WordArena/work/TODO.txt
@@ -1,7 +1,8 @@
 WordArena
 ¯¯¯¯¯¯¯¯¯
+[ ] Implémenter le pinch to zoom
+[ ] Mettre la font des lettres en noir
 [ ] Ne pas sélectionner de lettre lorsqu'on déplace l'arène
-[ ] Interdire les mots déjà saisis pendant le round
 [ ] Avoir un visuel différent par types de cellule
 [ ] Gérer la vie d'une partie :
 	- 1 grille de lettres par round
