--- a/WordArena/work/TODO.txt
+++ b/WordArena/work/TODO.txt
@@ -1,7 +1,7 @@
 WordArena
 ¯¯¯¯¯¯¯¯¯
 [ ] Ecrire un SimpleButtonScript qui tient compte de l'internationalisation pour le libellé du bouton
-[ ] Supprimer le code et les assets sans lien avec WordArena (les mettre dans un autre slamdunk-prototype)
+[ ] Supprimer le code et les assets sans lien avec WordArena (les mettre dans un autre slamdunk-prototype), puis nettoyer le gradle (notamment ashley)
 [ ] Avoir un visuel différent par types de cellule
 
 Ashley                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                            
