--- a/WordArena/android/assets/i18n/WordArena_fr.properties
+++ b/WordArena/android/assets/i18n/WordArena_fr.properties
@@ -38,6 +38,11 @@ ui.editor.tool.power=Force
 ui.editor.tool.owner=Possesseur
 ui.editor.tool.zone=Zone
 ui.editor.tool.createWall=Mur
+ui.editor.player.0=Neutre
+ui.editor.player.1=Joueur 1
+ui.editor.player.2=Joueur 2
+ui.editor.player.3=Joueur 3
+ui.editor.player.4=Joueur 4
 
 # Arena names
 arena.-1=Arène sans nom
