ADD : Editeur : sauvegarde dans un fichier json

--- a/WordArena/android/assets/i18n/WordArena.properties
+++ b/WordArena/android/assets/i18n/WordArena.properties
@@ -57,6 +57,7 @@ ui.editor.tool.power=Power
 ui.editor.tool.owner=Owner
 ui.editor.tool.zone=Zone
 ui.editor.tool.createWall=Wall
+ui.editor.save=Save
 ui.editor.changeSize=Create
 ui.editor.createZone=Create
 ui.editor.player.0=Neutral
