--- a/WordArena/android/assets/i18n/WordArena_fr.properties
+++ b/WordArena/android/assets/i18n/WordArena_fr.properties
@@ -38,6 +38,7 @@ ui.editor.tool.power=Force
 ui.editor.tool.owner=Possesseur
 ui.editor.tool.zone=Zone
 ui.editor.tool.createWall=Mur
+ui.editor.save=Enregistrer
 ui.editor.changeSize=Créer
 ui.editor.createZone=Créer
 ui.editor.player.0=Neutre
