--- a/WordArena/work/TODO.txt
+++ b/WordArena/work/TODO.txt
@@ -2,7 +2,7 @@ WordArena
 ¯¯¯¯¯¯¯¯¯
 [ ] ADD : Editeur :
 	- Désélectionner l'ancien outil quand on en sélectionne un nouveau
-	- Sauvegarder le résultat dans un fichier
+	FIX : Vérifier le fonctionnement des différents outils, y compris quand on change la valeur en cours d'utilisation
 	- Charger un fichier pour modifications
 [ ] MOD : Utiliser de simples images de 48px pour les edge et wall, car au final on utilise 1 image par cellule donc la taille est connue.
 [ ] ADD : Sur l'écran de pause, afficher les stats (score, zones, rounds) dans un tableau
