DEV : Editeur : save/load json

--- a/WordArena/android/assets/i18n/WordArena.properties
+++ b/WordArena/android/assets/i18n/WordArena.properties
@@ -58,7 +58,9 @@ ui.editor.tool.owner=Owner
 ui.editor.tool.zone=Zone
 ui.editor.tool.createWall=Wall
 ui.editor.save=Save
-ui.editor.changeSize=Create
+ui.editor.create=Create
+ui.editor.modify=Modify
+ui.editor.resize=Resize
 ui.editor.createZone=Create
 ui.editor.player.0=Neutral
 ui.editor.player.1=Player 1
@@ -73,3 +75,5 @@ arena.1=Ivory Tower
 arena.2=Trench Warfare
 arena.3=Diamond
 arena.4=Battlefield
+arena.DBG1=DBG1
+arena.DBG2=DBG2
