--- a/WordArena/android/assets/i18n/WordArena_fr.properties
+++ b/WordArena/android/assets/i18n/WordArena_fr.properties
@@ -39,7 +39,9 @@ ui.editor.tool.owner=Possesseur
 ui.editor.tool.zone=Zone
 ui.editor.tool.createWall=Mur
 ui.editor.save=Enregistrer
-ui.editor.changeSize=Créer
+ui.editor.create=Créer
+ui.editor.modify=Modifier
+ui.editor.resize=Redimensionner
 ui.editor.createZone=Créer
 ui.editor.player.0=Neutre
 ui.editor.player.1=Joueur 1
@@ -54,3 +56,5 @@ arena.1=Tour d'ivoire
 arena.2=Guerre de tranchées
 arena.3=Diamant
 arena.4=Champ de bataille
+arena.DBG1=DBG1
+arena.DBG2=DBG2
