ADD : Editeur : possibilité de charger un fichier pour modifications

--- a/WordArena/android/assets/i18n/WordArena.properties
+++ b/WordArena/android/assets/i18n/WordArena.properties
@@ -69,10 +69,9 @@ ui.editor.player.3=Player 3
 ui.editor.player.4=Player 4
 
 # Arena names
-arena.-1=Unnamed Arena
-arena.0=First Assault
-arena.1=Ivory Tower
-arena.2=Trench Warfare
-arena.3=Diamond
-arena.4=Battlefield
-arena.DBG14=DBG14
+arena.unnammed=Unnamed Arena
+arena.0_first_assault=First assault
+arena.1_ivory_tower=Ivory Tower
+arena.2_trench_warfare= Trench Warfare
+arena.3_diamond=Diamond
+arena.4_battlefield=Battlefield
