--- a/WordArena/android/assets/i18n/WordArena_fr.properties
+++ b/WordArena/android/assets/i18n/WordArena_fr.properties
@@ -50,9 +50,9 @@ ui.editor.player.3=Joueur 3
 ui.editor.player.4=Joueur 4
 
 # Arena names
-arena.-1=Arène sans nom
-arena.0=Premier Assaut
-arena.1=Tour d'ivoire
-arena.2=Guerre de tranchées
-arena.3=Diamant
-arena.4=Champ de bataille
+arena.unnammed=Arène sans nom
+arena.0_first_assault=Premier Assaut
+arena.1_ivory_tower=Tour d'ivoire
+arena.2_trench_warfare=Guerre de tranchées
+arena.3_diamond=Diamant
+arena.4_battlefield=Champ de bataille
