FIX : Zones - Le contrôle d'une zone ne semble mis à jour que lorsqu'on ajouter une zone ayant un owner non neutre. Si on agrandit la zone par la suite, le contrôle n'est pas affiché pour ces nouvelles cellules.

--- a/WordArena/android/assets/i18n/WordArena.properties
+++ b/WordArena/android/assets/i18n/WordArena.properties
@@ -69,7 +69,7 @@ ui.editor.player.3=Player 3
 ui.editor.player.4=Player 4
 
 # Arena names
-arena.unnammed=Unnamed Arena
+arena.unnamed=Unnamed Arena
 arena.0_first_assault=First assault
 arena.1_ivory_tower=Ivory Tower
 arena.2_trench_warfare= Trench Warfare
